02-Standalone/traefik-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  labels:
    environment: developer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-dev.illuminati.dark`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-illuminati-tls
